# genai-template

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB_SETUP.md  LICENSE  README.md  cookiecutter.json  test_template.sh
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: EXAMPLES.md
test_project/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
test_project/test_project/: __init__.py  config.py  models.py
test_project/test_project/api/: main.py
test_project/test_project/cli/: main.py
test_project/test_project/ui/: dashboard.py
test_project/tests/: conftest.py
test_project/tests/integration/: test_api.py
test_project/tests/unit/: test_client.py
{{cookiecutter.project_slug}}/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/integration/: test_api.py
{{cookiecutter.project_slug}}/tests/unit/: test_client.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  client.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/: __init__.py  main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/cli/: __init__.py  main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/providers/: __init__.py  base.py  bedrock_provider.py  gemini_provider.py  openai_provider.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/ui/: __init__.py  dashboard.py
